# Sicefish

./: Board.hs  MoveGen.hs  Pieces.hs  README.md  sicefish.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/582fec0d/: cabal_macros.h
.stack-work/ghci/86f00312/: cabal_macros.h
.stack-work/ghci/f59bbedd/: cabal_macros.h
.stack-work/ghci/f6b10464/: cabal_macros.h
.stack-work/ghci/fd9389a9/: cabal_macros.h
.stack-work/install/3902ff1b/lib/x86_64-windows-ghc-8.10.7/sicefish-0.1.0.0-7UAI4U0TB2cEvu45xh5ZHC/: Board.hi  MoveGen.hi  Pieces.hi
.stack-work/install/3902ff1b/pkgdb/: package.cache  sicefish-0.1.0.0-7UAI4U0TB2cEvu45xh5ZHC.conf
.stack-work/install/446830ca/lib/x86_64-windows-ghc-8.10.4/sicefish-0.1.0.0-JxynDWSv7JSGRmWiOUJd29/: Board.hi  Game.hi  MoveGen.hi  Pieces.hi
.stack-work/install/446830ca/pkgdb/: package.cache  sicefish-0.1.0.0-JxynDWSv7JSGRmWiOUJd29.conf
.stack-work/install/f87f918b/lib/x86_64-windows-ghc-8.10.7/sicefish-0.1.0.0-7UAI4U0TB2cEvu45xh5ZHC/: Board.hi  Game.hi  MoveGen.hi
.stack-work/install/f87f918b/pkgdb/: package.cache  sicefish-0.1.0.0-7UAI4U0TB2cEvu45xh5ZHC.conf
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: Board.hs  Eval.hs  FENParser.hs  Game.hs  Main.hs  Move.hs  MoveGen.hs  Pieces.hs  Search.hs  Special.hs  Test.hs  UCIParser.hs
