cabal-version:       >=1.10

name:                sicefish
version:             0.1.0.0
license-file:        LICENSE
maintainer:          whyu.tilt@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Pieces,
                       Game,
                       MoveGen,
                       Board,
                       FENParser,
                       Special,
                       UCIParser
  hs-source-dirs:      src
  build-depends:       base >=4.14 && <4.15
                     , HUnit >= 1.6
                     , containers
                     , QuickCheck
                     , vector
                     , megaparsec
  default-language:    Haskell2010
  ghc-options:         -Wno-type-defaults -fwarn-incomplete-patterns
                     
executable sicefish
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.14 && <4.15
                     , HUnit >= 1.6
                     , QuickCheck  
                     , megaparsec  
                     , containers                 
  default-language:    Haskell2010
  ghc-options:         -Wno-type-defaults -fwarn-incomplete-patterns

