cabal-version:       >=1.10

name:                sicefish
version:             0.1.0.0
license-file:        LICENSE
maintainer:          whyu.tilt@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Pieces,
                       Game,
                       MoveGen,
                       Board,
                       FENParser,
                       Special,
                       UCIParser,
                       Move,
                       Search,
                       Eval
  hs-source-dirs:      src
  build-depends:       base >=4.14 && <4.15
                     , HUnit >= 1.6
                     , containers
                     , QuickCheck
                     , vector
                     , megaparsec
                     , mtl
  default-language:    Haskell2010
  ghc-options:         -Wno-type-defaults -fwarn-incomplete-patterns
                     
executable sicefish
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.14 && <4.15
                     , HUnit >= 1.6
                     , QuickCheck  
                     , megaparsec  
                     , containers                 
                     , mtl
  default-language:    Haskell2010
  ghc-options:         -Wno-type-defaults -fwarn-incomplete-patterns
  other-modules:       Pieces,
                       Game,
                       MoveGen,
                       Board,
                       FENParser,
                       Special,
                       UCIParser,
                       Move,
                       Search,
                       Eval

